samples/_failures_safe/1761319721_8dfae5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d2929fe.c: In function ‘main’:
./samples/SAFE/__tmp_7d2929fe.c:160:16: error: missing terminating " character
  160 |         printf("\nCurrent state:
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7d2929fe.c:160:9: error: expected expression at end of input
  160 |         printf("\nCurrent state:
      |         ^~~~~~
./samples/SAFE/__tmp_7d2929fe.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7d2929fe.c:160:9: error: expected declaration or statement at end of input
